[package]
name = "axum-jwt-token"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
axum-keycloak-auth = "0.1.2"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
time = {version = "0.3.29", features = ["serde"]}
tokio = { version = "1.32.0", features = ["full"] }
tower-http = "0.4.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

